Test behavior if we provide rather than replace symfony/routing v3.2.13

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         ]
     },
     "minimum-stability": "dev",
-    "replace": {
+    "provide": {
 	"symfony/routing": "v3.2.13"
     },
     "extra": {
