Switch back to using replace

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         ]
     },
     "minimum-stability": "dev",
-    "provide": {
+    "replace": {
 	"symfony/routing": "v3.2.13"
     },
     "extra": {
